servidorWeb/src/usql/usql.java
/* Generated By:JavaCC: Do not edit this line. usql.java */
package usql;
import compilador.nodoParser;
 public class usql implements usqlConstants {

  static final public nodoParser inicio() throws ParseException {
    nodoParser raiz = new nodoParser("inicio","inicio");
    nodoParser hijo;
    hijo = sentencias();
        System.out.println("Compilacion correcta!!");
        raiz.agregarHijo(hijo);
        {if (true) return raiz;}
    throw new Error("Missing return statement in function");
  }

  static final public nodoParser sentencias() throws ParseException {
    nodoParser sentencias = new nodoParser("sentencias","sentencias");
    nodoParser h;
    label_1:
    while (true) {
      if (jj_2_1(2)) {
        ;
      } else {
        break label_1;
      }
      h = sentencia();
            sentencias.agregarHijo(h);
    }
        {if (true) return sentencias;}
    throw new Error("Missing return statement in function");
  }

  static final public nodoParser sentencia() throws ParseException {
    nodoParser h;
    if (jj_2_2(2)) {
      h = ddl();
        nodoParser ddl = new nodoParser("ddl","ddl");
        ddl.agregarHijo(h);
        {if (true) return ddl;}
    } else if (jj_2_3(2)) {
      h = dml();
        nodoParser dml = new nodoParser("dml","dml");
        dml.agregarHijo(h);
        {if (true) return dml;}
    } else if (jj_2_4(2)) {
      h = dcl();
        nodoParser dcl = new nodoParser("dcl","dcl");
        dcl.agregarHijo(h);
        {if (true) return dcl;}
    } else if (jj_2_5(2)) {
      h = ssl();
        nodoParser ssl = new nodoParser("ssl","ssl");
        ssl.agregarHijo(h);
        {if (true) return ssl;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

/** SENTENCIAS DDL */
  static final public nodoParser ddl() throws ParseException {
        nodoParser h;
        nodoParser p;
    if (jj_2_6(2)) {
      h = crear();
            {if (true) return h;}
    } else if (jj_2_7(2)) {
      h = usar();
            {if (true) return h;}
    } else if (jj_2_8(2)) {
      h = alterar();
            {if (true) return h;}
    } else if (jj_2_9(2)) {
      h = eliminar();
            {if (true) return h;}
    } else if (jj_2_10(2)) {
      h = backup();
            {if (true) return h;}
    } else if (jj_2_11(2)) {
      h = restaurar();
            {if (true) return h;}
    } else if (jj_2_12(2)) {
      h = retorno();
            {if (true) return h;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

    //DDL CREAR
  static final public nodoParser crear() throws ParseException {
            nodoParser h;
    jj_consume_token(CREAR);
    h = crearCosa();
                {if (true) return h;}
    throw new Error("Missing return statement in function");
  }

  static final public nodoParser crearCosa() throws ParseException {
            Token t,p;
            nodoParser sentencias, tipo, valor;
    if (jj_2_13(2)) {
      jj_consume_token(BASE_DATOS);
      t = jj_consume_token(ID);
      jj_consume_token(PUNTOYCOMA);
                nodoParser crear = new nodoParser(constantes.crear,constantes.crear);

                nodoParser obj = new nodoParser(constantes.base_datos,constantes.base_datos);
                crear.agregarHijo(obj);

                nodoParser nombre = new nodoParser(constantes.id,t.toString().toLowerCase());
                crear.agregarHijo(nombre);
                {if (true) return crear;}
    } else if (jj_2_14(2)) {
      jj_consume_token(TABLA);
      t = jj_consume_token(ID);
      jj_consume_token(PAR1);
                nodoParser crear = new nodoParser(constantes.crear,constantes.crear);

                // nodoParser obj = new nodoParser(constantes.tabla,constantes.tabla);
                // crear.agregarHijo(obj);
                crear.agregarHijo(new nodoParser(constantes.tabla,constantes.tabla));

                // nodoParser nombre = new nodoParser(constantes.id,t.toString().toLowerCase());
                // crear.agregarHijo(nombre);
                crear.agregarHijo(new nodoParser(constantes.id,t.toString().toLowerCase()));
      atrTabla(crear);
      jj_consume_token(PAR2);
      jj_consume_token(PUNTOYCOMA);
                {if (true) return crear;}
    } else if (jj_2_15(2)) {
      jj_consume_token(OBJETO);
      t = jj_consume_token(ID);
      jj_consume_token(PAR1);
                String hola;
                nodoParser crear = new nodoParser(constantes.crear,constantes.crear);

                // nodoParser obj = new nodoParser(constantes.objeto,constantes.objeto);
                // crear.agregarHijo(obj);
                crear.agregarHijo(new nodoParser(constantes.objeto,constantes.objeto));

                // nodoParser nombre = new nodoParser(constantes.id,t.toString().toLowerCase());
                // crear.agregarHijo(nombre);
                crear.agregarHijo(new nodoParser(constantes.id,t.toString().toLowerCase()));
      atrTabla(crear);
      jj_consume_token(PAR2);
      jj_consume_token(PUNTOYCOMA);
                {if (true) return crear;}
    } else if (jj_2_16(2)) {
      jj_consume_token(PROCEDIMIENTO);
      t = jj_consume_token(ID);
      jj_consume_token(PAR1);
                nodoParser crear = new nodoParser(constantes.crear, constantes.crear);

                // nodoParser obj = new nodoParser(constantes.procedimiento,constantes.procedimiento);
                // crear.agregarHijo(obj);
                crear.agregarHijo(new nodoParser(constantes.procedimiento,constantes.procedimiento));

                // nodoParser nombre = new nodoParser(constantes.id,t.toString().toLowerCase());
                // crear.agregarHijo(nombre);
                crear.agregarHijo(new nodoParser(constantes.id,t.toString().toLowerCase()));
      atrTabla(crear);
      jj_consume_token(PAR2);
      jj_consume_token(LLA1);
      sentencias = sentencias();
      jj_consume_token(LLA2);
                crear.agregarHijo(sentencias);
                {if (true) return crear;}
    } else if (jj_2_17(2)) {
      jj_consume_token(FUNCION);
      t = jj_consume_token(ID);
      jj_consume_token(PAR1);
                nodoParser crear = new nodoParser(constantes.crear, constantes.crear);

                // nodoParser obj = new nodoParser(constantes.funcion,constantes.funcion);
                // crear.agregarHijo(obj);
                crear.agregarHijo(new nodoParser(constantes.funcion,constantes.funcion));

                // nodoParser nombre = new nodoParser(constantes.id,t.toString().toLowerCase());
                // crear.agregarHijo(nombre);
                crear.agregarHijo(new nodoParser(constantes.id,t.toString().toLowerCase()));
      atrTabla(crear);
      jj_consume_token(PAR2);
      tipo = tipo();
      jj_consume_token(LLA1);
      sentencias = sentencias();
      jj_consume_token(LLA2);
                crear.agregarHijo(tipo);
                crear.agregarHijo(sentencias);
                {if (true) return crear;}
    } else if (jj_2_18(2)) {
      jj_consume_token(USUARIO);
      t = jj_consume_token(ID);
      jj_consume_token(COLOCAR);
      p = jj_consume_token(PASSWORD);
      jj_consume_token(IGUAL);
      valor = valor();
      jj_consume_token(PUNTOYCOMA);
                nodoParser crear = new nodoParser(constantes.crear, constantes.crear);

                // nodoParser obj = new nodoParser(constantes.usuario,constantes.usuario);
                // crear.agregarHijo(obj);
                crear.agregarHijo(new nodoParser(constantes.usuario,constantes.usuario));

                // nodoParser nombre = new nodoParser(constantes.id,t.toString().toLowerCase());
                // crear.agregarHijo(nombre);
                crear.agregarHijo(new nodoParser(constantes.id,t.toString().toLowerCase()));

                crear.agregarHijo(valor);
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public void atrTabla(nodoParser p) throws ParseException {
            nodoParser tipo;
            nodoParser complemento;
            Token t;
    tipo = tipo();
    t = jj_consume_token(ID);
                nodoParser atr = new nodoParser("atrTabla","atrTabla");
                atr.agregarHijo(tipo);
                atr.agregarHijo(new nodoParser(constantes.id,t.toString().toLowerCase()));
    label_2:
    while (true) {
      if (jj_2_19(2)) {
        ;
      } else {
        break label_2;
      }
      complemento = complemento();
                atr.agregarHijo(complemento);
    }
                p.agregarHijo(atr);
    label_3:
    while (true) {
      if (jj_2_20(2)) {
        ;
      } else {
        break label_3;
      }
      jj_consume_token(COMA);
      tipo = tipo();
      t = jj_consume_token(ID);
                nodoParser atr2 = new nodoParser("atrTabla","atrTabla");
                atr2.agregarHijo(tipo);
                atr2.agregarHijo(new nodoParser(constantes.id,t.toString().toLowerCase()));
      label_4:
      while (true) {
        if (jj_2_21(2)) {
          ;
        } else {
          break label_4;
        }
        complemento = complemento();
                atr2.agregarHijo(complemento);
      }
                p.agregarHijo(atr2);
    }
  }

  static final public nodoParser complemento() throws ParseException {
            Token t;
    if (jj_2_22(2)) {
      jj_consume_token(NULO);
                {if (true) return new nodoParser("complemento",constantes.nulo);}
    } else if (jj_2_23(2)) {
      jj_consume_token(NO_NULO);
                {if (true) return new nodoParser("complemento",constantes.no_nulo);}
    } else if (jj_2_24(2)) {
      jj_consume_token(AUTOINCREMENTABLE);
                {if (true) return new nodoParser("complemento",constantes.autoincrementable);}
    } else if (jj_2_25(2)) {
      jj_consume_token(LLAVE_PRIMARIA);
                {if (true) return new nodoParser("complemento",constantes.llave_primaria);}
    } else if (jj_2_26(2)) {
      jj_consume_token(LLAVE_FORANEA);
      t = jj_consume_token(ID);
                nodoParser foranea = new nodoParser("complemento", constantes.llave_foranea);
                nodoParser id = new nodoParser(constantes.id,t.toString().toLowerCase());

                foranea.agregarHijo(id);

                {if (true) return foranea;}
    } else if (jj_2_27(2)) {
      jj_consume_token(UNICO);
                {if (true) return new nodoParser("complemento",constantes.unico);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public nodoParser retorno() throws ParseException {
            nodoParser valor;
    jj_consume_token(RETORNO);
    valor = valor();
    jj_consume_token(PUNTOYCOMA);
                nodoParser retorno = new nodoParser(constantes.retorno, constantes.retorno);
                retorno.agregarHijo(valor);
                {if (true) return retorno;}
    throw new Error("Missing return statement in function");
  }

    //DDL USAR
  static final public nodoParser usar() throws ParseException {
            Token id;
    jj_consume_token(USAR);
    id = jj_consume_token(ID);
    jj_consume_token(PUNTOYCOMA);
                nodoParser usar = new nodoParser(constantes.usar, constantes.usar);
                usar.agregarHijo(new nodoParser(constantes.id, id.toString().toLowerCase()));
                {if (true) return usar;}
    throw new Error("Missing return statement in function");
  }

    //DDL ALTERAR
  static final public nodoParser alterar() throws ParseException {
            nodoParser obj;
    jj_consume_token(ALTERAR);
    obj = alterarCosa();
                {if (true) return obj;}
    throw new Error("Missing return statement in function");
  }

  static final public nodoParser alterarCosa() throws ParseException {
            Token id;
            nodoParser tipo, valor;
    if (jj_2_28(2)) {
      jj_consume_token(TABLA);
      id = jj_consume_token(ID);
      tipo = tipoAlterar();
      jj_consume_token(PUNTOYCOMA);
                nodoParser alterar = new nodoParser(constantes.alterar, constantes.alterar);
                alterar.agregarHijo(new nodoParser(constantes.tabla, constantes.tabla));
                alterar.agregarHijo(new nodoParser(constantes.id, id.toString().toLowerCase()));
                alterar.agregarHijo(tipo);
                {if (true) return alterar;}
    } else if (jj_2_29(2)) {
      jj_consume_token(OBJETO);
      id = jj_consume_token(ID);
      tipo = tipoAlterar();
      jj_consume_token(PUNTOYCOMA);
                nodoParser alterar = new nodoParser(constantes.alterar, constantes.alterar);
                alterar.agregarHijo(new nodoParser(constantes.objeto, constantes.objeto));
                alterar.agregarHijo(new nodoParser(constantes.id, id.toString().toLowerCase()));
                alterar.agregarHijo(tipo);
                {if (true) return alterar;}
    } else if (jj_2_30(2)) {
      jj_consume_token(USUARIO);
      id = jj_consume_token(ID);
      jj_consume_token(CAMBIAR);
      jj_consume_token(PASSWORD);
      jj_consume_token(IGUAL);
      valor = valor();
      jj_consume_token(PUNTOYCOMA);
                nodoParser alterar = new nodoParser(constantes.alterar, constantes.alterar);
                alterar.agregarHijo(new nodoParser(constantes.usuario, constantes.usuario));
                alterar.agregarHijo(new nodoParser(constantes.id, id.toString().toLowerCase()));
                alterar.agregarHijo(valor);
                {if (true) return alterar;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  static final public nodoParser tipoAlterar() throws ParseException {
            nodoParser enviados;
    if (jj_2_31(2)) {
      jj_consume_token(AGREGAR);
      jj_consume_token(PAR1);
                nodoParser agregar = new nodoParser(constantes.agregar, constantes.agregar);
      atrTabla(agregar);
      jj_consume_token(PAR2);
                {if (true) return agregar;}
    } else if (jj_2_32(2)) {
      jj_consume_token(QUITAR);
      enviados = enviados();
                nodoParser quitar = new nodoParser(constantes.quitar, constantes.quitar);
                quitar.agregarHijo(enviados);
                {if (true) return quitar;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

    //DDL ELIMINAR
  static final public nodoParser eliminar() throws ParseException {
            nodoParser eliminar = new nodoParser(constantes.eliminar, constantes.eliminar);
    jj_consume_token(ELIMINAR);
    eliminarCosa(eliminar);
                {if (true) return eliminar;}
    throw new Error("Missing return statement in function");
  }

  static final public void eliminarCosa(nodoParser p) throws ParseException {
            Token id;
    if (jj_2_33(2)) {
      jj_consume_token(TABLA);
      id = jj_consume_token(ID);
      jj_consume_token(PUNTOYCOMA);
                p.agregarHijo(new nodoParser(constantes.tabla, constantes.tabla));
                p.agregarHijo(new nodoParser(constantes.id, id.toString().toLowerCase()));
    } else if (jj_2_34(2)) {
      jj_consume_token(BASE_DATOS);
      id = jj_consume_token(ID);
      jj_consume_token(PUNTOYCOMA);
                p.agregarHijo(new nodoParser(constantes.base_datos, constantes.base_datos));
                p.agregarHijo(new nodoParser(constantes.id, id.toString().toLowerCase()));
    } else if (jj_2_35(2)) {
      jj_consume_token(OBJETO);
      id = jj_consume_token(ID);
      jj_consume_token(PUNTOYCOMA);
                p.agregarHijo(new nodoParser(constantes.objeto, constantes.objeto));
                p.agregarHijo(new nodoParser(constantes.id, id.toString().toLowerCase()));
    } else if (jj_2_36(2)) {
      jj_consume_token(USUARIO);
      id = jj_consume_token(ID);
      jj_consume_token(PUNTOYCOMA);
                p.agregarHijo(new nodoParser(constantes.usuario, constantes.usuario));
                p.agregarHijo(new nodoParser(constantes.id, id.toString().toLowerCase()));
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

    //DDL BACKUP
  static final public nodoParser backup() throws ParseException {
            Token id1, id2;
            nodoParser tipo;
    jj_consume_token(BACKUP);
    tipo = tipoBackup();
    id1 = jj_consume_token(ID);
    id2 = jj_consume_token(ID);
    jj_consume_token(PUNTOYCOMA);
                nodoParser backup = new nodoParser(constantes.backup, constantes.backup);
                backup.agregarHijo(tipo);
                backup.agregarHijo(new nodoParser(constantes.id, id1.toString().toLowerCase()));
                backup.agregarHijo(new nodoParser(constantes.id, id2.toString().toLowerCase()));
                {if (true) return backup;}
    throw new Error("Missing return statement in function");
  }

  static final public nodoParser tipoBackup() throws ParseException {
    if (jj_2_37(2)) {
      jj_consume_token(USQLDUMP);
                {if (true) return new nodoParser(constantes.usqldump, constantes.usqldump);}
    } else if (jj_2_38(2)) {
      jj_consume_token(COMPLETO);
                {if (true) return new nodoParser(constantes.completo, constantes.completo);}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

    //DDL RESTAURAR
  static final public nodoParser restaurar() throws ParseException {
            Token cad;
            nodoParser tipo;
    jj_consume_token(RESTAURAR);
    tipo = tipoBackup();
    cad = jj_consume_token(CADENA);
    jj_consume_token(PUNTOYCOMA);
                nodoParser restaurar = new nodoParser(constantes.restaurar, constantes.restaurar);
                restaurar.agregarHijo(tipo);
                restaurar.agregarHijo(new nodoParser(constantes.cadena, cad.toString().replaceAll("\u005c"", "")));
                {if (true) return restaurar;}
    throw new Error("Missing return statement in function");
  }

/** SENTENCIAS DML */
  static final public nodoParser dml() throws ParseException {
          nodoParser h;
    if (jj_2_39(2)) {
      h = insertar();
            {if (true) return h;}
    } else if (jj_2_40(2)) {
      h = actualizar();
      jj_consume_token(PUNTOYCOMA);
            {if (true) return h;}
    } else if (jj_2_41(2)) {
      h = borrar();
      jj_consume_token(PUNTOYCOMA);
            {if (true) return h;}
    } else if (jj_2_42(2)) {
      h = seleccionar();
      jj_consume_token(PUNTOYCOMA);
            {if (true) return h;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

      //DML INSERTAR
  static final public nodoParser insertar() throws ParseException {
                Token id;
                nodoParser env1, env2;
    jj_consume_token(INSERTAR);
    jj_consume_token(EN);
    jj_consume_token(TABLA);
    id = jj_consume_token(ID);
    jj_consume_token(PAR1);
    env1 = enviados();
                    nodoParser insertar = new nodoParser(constantes.insertar, constantes.insertar);
                    insertar.agregarHijo(new nodoParser(constantes.id, id.toString().toLowerCase()));
                    insertar.agregarHijo(env1);
    jj_consume_token(PAR2);
    if (jj_2_43(2)) {
      jj_consume_token(VALORES);
      jj_consume_token(PAR1);
      env2 = enviados();
      jj_consume_token(PAR2);
                    insertar.agregarHijo(env2);
    } else {
      ;
    }
    jj_consume_token(PUNTOYCOMA);
                    {if (true) return insertar;}
    throw new Error("Missing return statement in function");
  }

      //DML ACTUALIZAR
  static final public nodoParser actualizar() throws ParseException {
                Token id;
                nodoParser env1, env2, rest;
    jj_consume_token(ACTUALIZAR);
    jj_consume_token(TABLA);
    id = jj_consume_token(ID);
    jj_consume_token(PAR1);
    env1 = enviados();
    jj_consume_token(PAR2);
    jj_consume_token(VALORES);
    jj_consume_token(PAR1);
    env2 = enviados();
    jj_consume_token(PAR2);
                    nodoParser actualizar = new nodoParser(constantes.actualizar, constantes.actualizar);
                    actualizar.agregarHijo(new nodoParser(constantes.id, id.toString().toLowerCase()));
                    actualizar.agregarHijo(env1);
                    actualizar.agregarHijo(env2);
    label_5:
    while (true) {
      if (jj_2_44(2)) {
        ;
      } else {
        break label_5;
      }
      rest = restricciones();
                    actualizar.agregarHijo(rest);
    }
                    {if (true) return actualizar;}
    throw new Error("Missing return statement in function");
  }

  static final public nodoParser restricciones() throws ParseException {
                Token id;
                nodoParser aux;
    if (jj_2_45(2)) {
      jj_consume_token(DONDE);
      aux = valor();
                    nodoParser donde = new nodoParser(constantes.donde, constantes.donde);
                    donde.agregarHijo(aux);
                    {if (true) return donde;}
    } else if (jj_2_46(2)) {
      jj_consume_token(ORDENAR_POR);
      id = jj_consume_token(ID);
      aux = tipoOrden();
                    nodoParser ordenar = new nodoParser(constantes.ordenar, constantes.ordenar);
                    ordenar.agregarHijo(new nodoParser(constantes.id, id.toString().toLowerCase()));
                    ordenar.agregarHijo(aux);
                    {if (true) return ordenar;}
    } else {
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }
